# meok-cra-art14-reporter-mcp

./: .gitignore  .mcp.json  README.md  SECURITY.md  acp.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
meok_cra_art14_reporter_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_cra_art14.py
