[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-cra-art14-reporter-mcp"
version = "1.0.1"
description = "MEOK CRA Article 14 Reporter MCP — actively-exploited-vulnerability notification with 24h/72h/14d clocks. ENISA + national CSIRT payload generator. 11 Sept 2026 cliff. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "cra", "cyber-resilience-act", "enisa", "csirt", "vulnerability-reporting", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://meok.ai/governance"
Repository = "https://github.com/CSOAI-ORG/meok-cra-art14-reporter-mcp"

[project.scripts]
meok-cra-art14-reporter-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]
